--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@types/react-helmet": "^6.1.0",
+    "classnames": "^2.3.1",
     "gatsby": "^3.2.1",
     "gatsby-plugin-gatsby-cloud": "^2.2.0",
     "gatsby-plugin-image": "^1.2.0",
@@ -38,7 +39,8 @@
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "sass": "^1.32.8",
-    "typescript": "^4.2.3"
+    "typescript": "^4.2.3",
+    "use-onclickoutside": "^0.3.2"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.20.0",
