--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "gatsby-plugin-sass": "^4.2.0",
     "gatsby-plugin-sharp": "^3.2.0",
     "gatsby-source-filesystem": "^3.2.0",
+    "gatsby-source-strapi": "^0.0.12",
     "gatsby-transformer-sharp": "^3.2.0",
+    "graphql": "^15.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
