--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
+    "react-markdown": "^5.0.3",
+    "remark-gfm": "^1.0.0",
     "sass": "^1.32.8",
     "typescript": "^4.2.3",
     "use-onclickoutside": "^0.3.2"
