--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bifolia",
   "private": true,
-  "description": "Raumgestaltung - Pflanzplanung - Gartenentwicklung",
+  "description": "Raumgestaltung | Pflanzplanung | Gartenentwicklung",
   "version": "0.1.0",
   "author": "Jonas Hübotter <jonas.huebotter@gmail.com>",
   "homepage": "https://bifolia.de",
