--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "gatsby-source-strapi": "^1.0.0-alpha.0",
     "gatsby-transformer-sharp": "^3.2.0",
     "react": "^17.0.2",
+    "react-cookie": "^4.0.3",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-intersection-observer": "^8.31.0",
