--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,31 +1,31 @@
-name: Deploy
+# name: Deploy
 
-on:
-  push:
-    branches:
-    - main
-  schedule:
-    - cron: '0 0 * * *'
-  workflow_dispatch:
+# on:
+#   push:
+#     branches:
+#     - main
+#   schedule:
+#     - cron: '0 0 * * *'
+#   workflow_dispatch:
 
-jobs:
-  build:
+# jobs:
+#   build:
 
-    runs-on: ubuntu-latest
+#     runs-on: ubuntu-latest
 
-    steps:
-    - uses: actions/checkout@master
-    - uses: actions/setup-node@v2.4.0
-      with:
-        node-version: '16.7.0'
-    - name: Install dependencies
-      run: yarn install
-    - name: Build
-      run: yarn build
-    - name: Deploy
-      uses: peaceiris/actions-gh-pages@v3.8.0
-      with:
-        deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
-        publish_branch: gh-pages
-        publish_dir: ./public
-        cname: bifolia.de
+#     steps:
+#     - uses: actions/checkout@master
+#     - uses: actions/setup-node@v2.4.0
+#       with:
+#         node-version: '16.7.0'
+#     - name: Install dependencies
+#       run: yarn install
+#     - name: Build
+#       run: yarn build
+#     - name: Deploy
+#       uses: peaceiris/actions-gh-pages@v3.8.0
+#       with:
+#         deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
+#         publish_branch: gh-pages
+#         publish_dir: ./public
+#         cname: bifolia.de
