--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "homepage": "https://bifolia.de",
   "license": "MIT",
   "engines": {
-    "node": "17.3.0"
+    "node": "16.13.1"
   },
   "scripts": {
     "build": "gatsby build",
@@ -37,6 +37,7 @@
     "gatsby-source-filesystem": "^3.14.0",
     "gatsby-source-strapi": "^1.0.0-alpha.0",
     "gatsby-transformer-sharp": "^3.14.0",
+    "process": "^0.11.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
