--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "gatsby-source-filesystem": "^3.14.0",
     "gatsby-source-strapi": "^1.0.0-alpha.0",
     "gatsby-transformer-sharp": "^3.14.0",
+    "moment": "^2.29.1",
     "process": "^0.11.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
