--- a/package.json
+++ b/package.json
@@ -25,18 +25,18 @@
   "dependencies": {
     "@types/react-helmet": "^6.1.5",
     "classnames": "^2.3.1",
-    "gatsby": "^3.14.6",
-    "gatsby-plugin-gatsby-cloud": "^3.1.0",
-    "gatsby-plugin-google-gtag": "^3.14.0",
-    "gatsby-plugin-image": "^1.4.1",
-    "gatsby-plugin-manifest": "^3.14.0",
-    "gatsby-plugin-offline": "^4.14.0",
-    "gatsby-plugin-react-helmet": "^4.14.0",
-    "gatsby-plugin-sass": "^4.14.0",
-    "gatsby-plugin-sharp": "^3.14.3",
-    "gatsby-source-filesystem": "^3.14.0",
+    "gatsby": "4.4.0",
+    "gatsby-plugin-gatsby-cloud": "4.4.0",
+    "gatsby-plugin-google-gtag": "4.4.0",
+    "gatsby-plugin-image": "2.4.0",
+    "gatsby-plugin-manifest": "4.4.0",
+    "gatsby-plugin-offline": "5.4.0",
+    "gatsby-plugin-react-helmet": "5.4.0",
+    "gatsby-plugin-sass": "5.4.0",
+    "gatsby-plugin-sharp": "4.4.0",
+    "gatsby-source-filesystem": "4.4.0",
     "gatsby-source-strapi": "^1.0.0-alpha.0",
-    "gatsby-transformer-sharp": "^3.14.0",
+    "gatsby-transformer-sharp": "4.4.0",
     "moment": "^2.29.1",
     "process": "^0.11.10",
     "react": "^17.0.2",
