--- a/package.json
+++ b/package.json
@@ -23,46 +23,46 @@
     "fix": "yarn prettier && yarn eslint --fix && yarn stylelint --fix"
   },
   "dependencies": {
-    "@types/react-helmet": "^6.1.5",
-    "classnames": "^2.3.1",
-    "gatsby": "4.12.1",
-    "gatsby-plugin-gatsby-cloud": "4.12.1",
-    "gatsby-plugin-google-gtag": "4.12.1",
-    "gatsby-plugin-image": "2.12.1",
-    "gatsby-plugin-manifest": "4.23.0",
-    "gatsby-plugin-offline": "5.12.1",
-    "gatsby-plugin-react-helmet": "5.12.1",
-    "gatsby-plugin-sass": "5.12.1",
-    "gatsby-plugin-sharp": "4.12.1",
-    "gatsby-source-filesystem": "4.23.0",
+    "@types/react-helmet": "^6.1.6",
+    "classnames": "^2.3.2",
+    "gatsby": "^5.0.0-next",
+    "gatsby-plugin-gatsby-cloud": "5.2.0",
+    "gatsby-plugin-google-gtag": "5.2.0",
+    "gatsby-plugin-image": "3.2.0",
+    "gatsby-plugin-manifest": "5.2.0",
+    "gatsby-plugin-offline": "6.2.0",
+    "gatsby-plugin-react-helmet": "6.2.0",
+    "gatsby-plugin-sass": "6.2.0",
+    "gatsby-plugin-sharp": "5.2.0",
+    "gatsby-source-filesystem": "5.2.0",
     "gatsby-source-strapi": "^1.0.3",
-    "gatsby-transformer-sharp": "4.12.1",
+    "gatsby-transformer-sharp": "5.2.0",
     "moment": "^2.29.4",
     "process": "^0.11.10",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
-    "react-intersection-observer": "^8.34.0",
-    "react-markdown": "^8.0.2",
+    "react-intersection-observer": "^9.4.1",
+    "react-markdown": "^8.0.4",
     "remark-gfm": "^3.0.1",
-    "sass": "^1.50.0",
-    "typescript": "^4.6.3",
+    "sass": "^1.56.1",
+    "typescript": "^4.9.4",
     "use-onclickoutside": "^0.4.1"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.19.0",
-    "@typescript-eslint/parser": "^5.19.0",
+    "@typescript-eslint/eslint-plugin": "^5.46.0",
+    "@typescript-eslint/parser": "^5.46.0",
     "assert": "^2.0.0",
-    "eslint": "^8.13.0",
+    "eslint": "^8.29.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.29.4",
-    "eslint-plugin-react-hooks": "^4.4.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.31.11",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "gh-pages": "^4.0.0",
-    "prettier": "^2.6.2",
-    "stylelint": "^14.6.1",
-    "stylelint-config-standard-scss": "^3.0.0",
+    "prettier": "^2.8.1",
+    "stylelint": "^14.16.0",
+    "stylelint-config-standard-scss": "^6.1.0",
     "stylelint-order": "^5.0.0",
-    "stylelint-scss": "^4.2.0"
+    "stylelint-scss": "^4.3.0"
   }
 }
