--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-inlinesvg": "^3.0.1",
     "react-intersection-observer": "^9.4.1",
     "react-markdown": "^8.0.4",
     "remark-gfm": "^3.0.1",
